--- a/InventoryMS/MainWindow.xaml
+++ b/InventoryMS/MainWindow.xaml
@@ -34,13 +34,13 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Button Margin="20 28 0 35" Style="{StaticResource topButton}">
+            <Button Margin="20,28,0,160" Style="{StaticResource topButton}">
                 <Icon:PackIconMaterial Kind="Menu" Width="30" Height="25"/>
-                
+
             </Button>
 
 
-            <Border Grid.Row="1" Background="Gray" CornerRadius="0 50 0 20">
+            <Border Background="Gray" CornerRadius="0 50 0 20" Margin="0,113,0,0" Grid.RowSpan="2">
                 <DockPanel>
 
                     <Border Width="80" Height="80" Padding="3" Background="White" CornerRadius="100"
@@ -56,10 +56,10 @@
                                DockPanel.Dock="Top" TextAlignment="Center" Margin="5 25 0 10"/>
                     <TextBlock Text="Cor Jeff Porcelaine" Foreground="White" FontSize="14" FontWeight="SemiBold"
                                 DockPanel.Dock="Top" TextAlignment="Center"/>
-                    
+
                     <!--Menu Separator-->
                     <Separator Margin="25" DockPanel.Dock="Top" Height="0.8" Background="DarkGray"/>
-                    
+
                     <!--Menu BUtton-->
                     <StackPanel DockPanel.Dock="Top">
                         <Button Style="{StaticResource menuButton}">
@@ -68,7 +68,7 @@
                                 <TextBlock Text="Dashboard"/>
                             </StackPanel>
                         </Button>
-                        
+
                         <Button Style="{StaticResource menuButton}">
                             <StackPanel Orientation="Horizontal">
                                 <Icon:PackIconMaterial Kind="Account"  Style="{StaticResource menuBUttonIcon}"/>
@@ -135,7 +135,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                
+
                 <!--Search Textbox-->
                 <Grid Width="300" HorizontalAlignment="Left">
                     <TextBlock Margin="20 0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
@@ -147,7 +147,7 @@
                     <Icon:PackIconMaterial Kind="Magnify" Width="15" Height="15" VerticalAlignment="Center"
                                            Margin="0 0 15 0" Foreground="#b0b9c6" HorizontalAlignment="Right"/>
                 </Grid>
-                
+
                 <!--Top Buttons-->
                 <Button Style="{StaticResource topButton}" Margin="0 0 20 0" Background="White" HorizontalAlignment="Right">
                     <Icon:PackIconMaterial Kind="Cog"/>
@@ -156,11 +156,11 @@
                 <Button Style="{StaticResource topButton}" Margin="0 0 55 0" HorizontalAlignment="Right">
                     <Icon:PackIconMaterial Kind="Bell"/>
                 </Button>
-                
+
                 <!--Page Title-->
                 <TextBlock Text="Members" Grid.Row="1" FontSize="32" FontWeight="SemiBold" Margin="0 20 0 0"
                            HorizontalAlignment="Left" Foreground="Black"/>
-                
+
                 <!--Add Button-->
                 <Button Style="{StaticResource addButton}">
                     <StackPanel Orientation="Horizontal">
@@ -178,9 +178,9 @@
                     <Button Content="Players" Style="{StaticResource tabButton}"/>
                     <Button Content="Archived" Style="{StaticResource tabButton}"/>
                 </StackPanel>
-                
+
             </Grid>
-            
+
         </Grid>
 
 
