--- a/InventoryMS/MainWindow.xaml
+++ b/InventoryMS/MainWindow.xaml
@@ -83,7 +83,7 @@
                             </StackPanel>
                         </Button>-->
 
-                        <Button Style="{StaticResource menuButton}">
+                        <Button Style="{StaticResource menuButton}" Click="OpenProductPage">
                             <StackPanel Orientation="Horizontal">
                                 <Icon:PackIconMaterial Kind="PotOutline" Style="{StaticResource menuBUttonIcon}"/>
                                 <TextBlock Text="Product"/>
@@ -157,82 +157,8 @@
                     <Icon:PackIconMaterial Kind="Bell"/>
                 </Button>
 
-                <!--Page Title-->
-                <TextBlock Text="Product" Grid.Row="1" FontSize="32" FontWeight="SemiBold" Margin="0 20 0 0"
-                           HorizontalAlignment="Left" Foreground="Black"/>
 
-                <!--Add Button-->
-                <Button Style="{StaticResource addButton}">
-                    <StackPanel Orientation="Horizontal">
-                        <Icon:PackIconMaterial Kind="Plus" VerticalAlignment="Center" Width="11" Height="11" Margin="0 1 8 0"/>
-                        <TextBlock Text="Add New Product"/>
-                    </StackPanel>
-                </Button>
-
-                <!--Separator-->
-                <Separator Height="1" Grid.Row="3" Background="White" Margin="0 -1 0 10"/>
-
-                <!--Tab Buttons-->
-                <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10 0 0">
-                    <Button Content="Product Categories" Style="{StaticResource tabButton}" Width="150"/>
-                    <Button Content="Best Selling" Style="{StaticResource tabButton}" Width="130"/>
-                    <Button Content="Latest Product" Style="{StaticResource tabButton}" Width="130"/>
-                    <Button Content="Latest Product" Style="{StaticResource tabButton}" Width="130"/>
-                    <Button Content="Latest Product" Style="{StaticResource tabButton}" Width="130"/>
-                </StackPanel>
-
-                <!--Counter Title-->
-                <TextBlock Text="68 Club Staff" Grid.Row="4" FontSize="18" FontWeight="SemiBold"
-                           Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-
-                <TextBlock Text="Filter by" Grid.Row="4" FontSize="18" FontWeight="SemiBold" Margin="0 0 215 0"
-            Foreground="Black" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-
-
-                <!--Filter Textbox-->
-                <Grid Width="200" HorizontalAlignment="Right" Grid.Row="4">
-                    <TextBlock Margin="15 0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
-               Panel.ZIndex="1" Text="Seacrh in Member ..."
-               Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}"/>
-
-                    <TextBox x:Name="txtFilter" Style="{StaticResource textboxSearch}"/>
-                </Grid>
-
-                <!--Member Datagrid-->
-                <!--DataGrid ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource}">
-
-                </DataGrid-->
-
-                <!--Pagination Sedtion-->
-                <Border Grid.Row="6" HorizontalAlignment="Right" BorderBrush="White" BorderThickness="1"
-                            CornerRadius="5" Padding="5" Background="White" Margin="0 10 10 10">
-                    <StackPanel Orientation="Horizontal">
-
-                        <Button Style="{StaticResource pagingButton}">
-                            <Icon:PackIconMaterial Kind="ChevronLeft" Style="{StaticResource pagingButtonIcon}"/>
-                        </Button>
-
-                        <Rectangle Width="1" Fill="White" Margin="3 7"/>
-
-                        <Button Style="{StaticResource pagingButton}" Content="1"/>
-                        <Button Style="{StaticResource pagingButton}" Content="2" Background="Gray" Foreground="White"/>
-                        <Button Style="{StaticResource pagingButton}" Content="3"/>
-
-                        <TextBlock Text="..." Foreground="Gray" VerticalAlignment="Center" FontSize="15" Margin="10 0"/>
-
-                        <Button Style="{StaticResource pagingButton}" Content="7"/>
-                        <Button Style="{StaticResource pagingButton}" Content="8"/>
-                        <Button Style="{StaticResource pagingButton}" Content="9"/>
-
-                        <Rectangle Width="1" Fill="White" Margin="3 7"/>
-
-                        <Button Style="{StaticResource pagingButton}">
-                            <Icon:PackIconMaterial Kind="ChevronRight" Style="{StaticResource pagingButtonIcon}"/>
-                        </Button>
-
-                    </StackPanel>
-                </Border>
-                <ContentControl x:Name="MainContent" Content="MainContent" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="377" Width="750"/>
+                <ContentControl x:Name="MainContent" Content="MainContent" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="600" Width="750"/>
             </Grid>
 
         </Grid>
