--- a/InventoryMS/MainWindow.xaml
+++ b/InventoryMS/MainWindow.xaml
@@ -90,14 +90,14 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Style="{StaticResource menuButton}">
+                        <Button Style="{StaticResource menuButton}" Click="SupplierButton_Click">
                             <StackPanel Orientation="Horizontal">
                                 <Icon:PackIconMaterial Kind="Truck"  Style="{StaticResource menuBUttonIcon}"/>
                                 <TextBlock Text="Supplier"/>
                             </StackPanel>
                         </Button>
 
-                        <Button Style="{StaticResource menuButton}">
+                        <Button Style="{StaticResource menuButton}"  Click="SalesButton_Click">
                             <StackPanel Orientation="Horizontal">
                                 <Icon:PackIconMaterial Kind="Cash100" Style="{StaticResource menuBUttonIcon}"/>
                                 <TextBlock Text="Sales"/>
@@ -156,14 +156,8 @@
                 <Button Style="{StaticResource topButton}" Margin="0 0 55 0" HorizontalAlignment="Right">
                     <Icon:PackIconMaterial Kind="Bell"/>
                 </Button>
-
-
                 <ContentControl x:Name="MainContent" Content="MainContent" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="600" Width="750"/>
             </Grid>
-
         </Grid>
-
-
     </Border>
-
 </Window>
