--- a/InventoryMS/MainWindow.xaml
+++ b/InventoryMS/MainWindow.xaml
@@ -83,7 +83,7 @@
                             </StackPanel>
                         </Button>-->
 
-                        <Button Style="{StaticResource menuButton}" Click="OpenProductPage">
+                        <Button Style="{StaticResource menuButton}" Click="ProductButton_Click">
                             <StackPanel Orientation="Horizontal">
                                 <Icon:PackIconMaterial Kind="PotOutline" Style="{StaticResource menuBUttonIcon}"/>
                                 <TextBlock Text="Product"/>
@@ -156,7 +156,7 @@
                 <Button Style="{StaticResource topButton}" Margin="0 0 55 0" HorizontalAlignment="Right">
                     <Icon:PackIconMaterial Kind="Bell"/>
                 </Button>
-                <ContentControl x:Name="MainContent" Content="MainContent" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="600" Width="750"/>
+                <ContentControl x:Name="MainContent" Content="MainContent" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="600" Width="750"/>
             </Grid>
         </Grid>
     </Border>
